# vs-arpack

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindF2C.cmake  FindSuperLU.cmake  arpackng-config.cmake.in
libs/: README.md
src/: ARPACK.sln  CMakeLists.txt  arerror.h
src/ARPACK/arpack-ng/: arpack.h  arpack_constants.h  arpack_internal.h  arpack_types.h  common_blocks.h  constants.h  lapack.h
src/ARPACK/arpack-ng/EXAMPLES/COMPLEX/: cndrv1.c  cndrv2.c  cndrv3.c  cndrv4.c  zndrv1.c  zndrv2.c  zndrv3.c  zndrv4.c
src/ARPACK/arpack-ng/EXAMPLES/NONSYM/: dndrv1.c  dndrv2.c  dndrv3.c  dndrv4.c  dndrv5.c  dndrv6.c  sndrv1.c  sndrv2.c  sndrv3.c  sndrv4.c  sndrv5.c  sndrv6.c
src/ARPACK/arpack-ng/EXAMPLES/SIMPLE/: cnsimp.c  dnsimp.c  dssimp.c  snsimp.c  sssimp.c  znsimp.c
src/ARPACK/arpack-ng/EXAMPLES/SVD/: dsvd.c  ssvd.c
src/ARPACK/arpack-ng/EXAMPLES/SYM/: dsdrv1.c  dsdrv2.c  dsdrv3.c  dsdrv4.c  dsdrv5.c  dsdrv6.c  ssdrv1.c  ssdrv2.c  ssdrv3.c  ssdrv4.c  ssdrv5.c  ssdrv6.c
src/ARPACK/arpack-ng/SRC/: cgetv0.c  cnaitr.c  cnapps.c  cnaup2.c  cnaupd.c  cneigh.c  cneupd.c  cngets.c  csortc.c  cstatn.c  dgetv0.c  dnaitr.c  dnapps.c  dnaup2.c  dnaupd.c  dnconv.c  dneigh.c  dneupd.c  dngets.c  dsaitr.c  dsapps.c  dsaup2.c  dsaupd.c  dsconv.c  dseigt.c  dsesrt.c  dseupd.c  dsgets.c  dsortc.c  dsortr.c  dstatn.c  dstats.c  dstqrb.c  sgetv0.c  snaitr.c  snapps.c  snaup2.c  snaupd.c  snconv.c  sneigh.c  (+26 more)
src/ARPACK/arpack-ng/UTIL/: cmout.c  cvout.c  dmout.c  dvout.c  icnteq.c  icopy.c  iset.c  iswap.c  ivout.c  second.c  smout.c  svout.c  zmout.c  zvout.c
src/Visual Studio/shared/libarpack/: ar_ci_exports.cpp  ar_ci_exports.h  ar_di_exports.cpp  ar_di_exports.h  ar_si_exports.cpp  ar_si_exports.h  ar_zi_exports.cpp  ar_zi_exports.h  common.h  libarpack.vcxproj  libarpack.vcxproj.filters
src/Visual Studio/static/arpack-ng/: arpack-ng.vcxproj  arpack-ng.vcxproj.filters
src/Visual Studio/tests/ctest/: ctest.vcxproj  ctest.vcxproj.filters  examples.h
src/Visual Studio/tests/dtest/: dtest.vcxproj  dtest.vcxproj.filters  examples.h  main.c
src/Visual Studio/tests/stest/: examples.h  stest.vcxproj  stest.vcxproj.filters
src/Visual Studio/tests/ztest/: examples.h  main.c  ztest.vcxproj  ztest.vcxproj.filters
src/arpack-ds/: CMakeLists.txt  ar_ci_exports.h  ar_di_exports.h  ar_si_exports.cpp  ar_si_exports.h  ar_zi_exports.h  arerror.cpp  common.h
src/arpack-ng/: CMakeLists.txt  arpack.h  arpack_constants.h  arpack_internal.h  arpack_types.c  arpack_types.h  blas.h  f2c.c  f2c.h  lapack.h
src/arpack-ng/EXAMPLES/: CMakeLists.txt
src/arpack-ng/EXAMPLES/COMPLEX/: cndrv1.c  cndrv2.c  cndrv3.c  cndrv4.c  zndrv1.c  zndrv2.c  zndrv3.c  zndrv4.c
src/arpack-ng/EXAMPLES/NONSYM/: dndrv1.c  dndrv2.c  dndrv3.c  dndrv4.c  dndrv5.c  dndrv6.c  sndrv1.c  sndrv2.c  sndrv3.c  sndrv4.c  sndrv5.c  sndrv6.c
src/arpack-ng/EXAMPLES/SIMPLE/: cnsimp.c  dnsimp.c  dssimp.c  snsimp.c  sssimp.c  znsimp.c
src/arpack-ng/EXAMPLES/SVD/: dsvd.c  ssvd.c
src/arpack-ng/EXAMPLES/SYM/: dsdrv1.c  dsdrv2.c  dsdrv3.c  dsdrv4.c  dsdrv5.c  dsdrv6.c  ssdrv1.c  ssdrv2.c  ssdrv3.c  ssdrv4.c  ssdrv5.c  ssdrv6.c
src/arpack-ng/ICB/: CMakeLists.txt  arpack.hpp  arpack_icb.c  debug.c  stat.c
src/arpack-ng/SRC/: CMakeLists.txt  cgetv0.c  cnaitr.c  cnapps.c  cnaup2.c  cnaupd.c  cneigh.c  cneupd.c  cngets.c  csortc.c  dgetv0.c  dnaitr.c  dnapps.c  dnaup2.c  dnaupd.c  dnconv.c  dneigh.c  dneupd.c  dngets.c  dsaitr.c  dsapps.c  dsaup2.c  dsaupd.c  dsconv.c  dseigt.c  dsesrt.c  dseupd.c  dsgets.c  dsortc.c  dsortr.c  dstqrb.c  sgetv0.c  snaitr.c  snapps.c  snaup2.c  snaupd.c  snconv.c  sneigh.c  sneupd.c  sngets.c  (+23 more)
src/arpack-ng/UTIL/: CMakeLists.txt  cmout.c  cvout.c  dmout.c  dvout.c  ivout.c  smout.c  svout.c  zmout.c  zvout.c
src/libarpack/: CMakeLists.txt  exports.def
src/tests/: ctest.c  ctest.h  dtest.c  dtest.h  stest.c  stest.h  ztest.c  ztest.h
